--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="https://tcshtmlhoster.ct.ws/upload/nnkPNG.png" alt="Nyi Nyi Ko Profile" class="profile-img">
+            <img src="https://drive.google.com/file/d/1OiHXGRTNSOybuIs9kCz-ueIKI_8B3MyU/view?usp=drivesdk" alt="Nyi Nyi Ko Profile" class="profile-img">
             <h1>Nyi Nyi Ko</h1>
         </div>
 
