--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="https://github.com/nio-cookie/ce/blob/main/IMG_20250626_110452_703.jpg" alt="Nyi Nyi Ko Profile" class="profile-img">
+            <img src="IMG_20250626_110452_703.jpg " alt="Nyi Nyi Ko Profile" class="profile-img">
             <h1>Nyi Nyi Ko</h1>
         </div>
 
