--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 
     <div class="container" id="mainContent">
         <div class="profile">
-            <img src="https://tcshtmlhoster.ct.ws/upload/nnkPNG.png" alt="Nyi Nyi Ko Profile" class="profile-img">
+            <img src="pf.jpg" alt="Nyi Nyi Ko Profile" class="profile-img">
             <h1>Nyi Nyi Ko</h1>
         </div>
 
